# beam_scan_analysis

./: .gitignore  beam_scan_analysis.py  beam_scan_gui.py  beam_scan_plotting.py  environment.yml  heatmaps.py  load_scan_data.py  main.py  main.spec  main_new.py  main_old.py  pyinstaller_command.txt  pyproject.toml  quick_start_guide.html  ruff.toml  surface_figures.py  test.py
LICENCE/: COPYRIGHT.txt  MIT.txt  THIRD-PARTY-NOTICE.txt
helpers/: helpers.py  load_scan_data.py
src/: main.py
src/assets/: quick_start_guide.html
src/controller/: beam_scan_plotting.py  controller.py  load_scan_data.py  surface_figures.py
src/helpers/: helpers.py  load_scan_data.py
src/model/: beam_scan.py  beam_scan_analysis.py  model.py  worker.py
src/view/: beam_scan_gui.py  beam_scan_plotting.py  heatmaps.py  main_window.py  override_centroid_window.py  surface_figures.py
