[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "beam_scan_analysis"
version = "2.1.1"
description = "A GUI for analyzing beam scans"
authors = [{ name = "Joshua Erbe", email = "j.erbe@oregon-physics.com" }]
dependencies = [
    "PySide6",
    "qt-material",
    "pandas",
    "numpy",
    "scipy",
    "scikit-image",
    "kaleido",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[project.scripts]
run-app = "src.main:run_app"
