[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "beam_scan_analysis"
version = "2.4.0"
description = "A GUI for analyzing beam scans"
authors = [{ name = "Joshua Erbe", email = "j.erbe@oregon-physics.com" }]
dependencies = [
    "pyside6 ~= 6.9.0",
    "qt-material == 2.14",
    "pandas ~= 2.2.3",
    "numpy ~= 2.2.5",
    "scipy ~= 1.15.2",
    "scikit-image ~= 0.25.2",
    "kaleido ~= 0.1.0",
    "plotly ~= 6.0.1",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[project.scripts]
run-app = "src.main:run_app"
